kubernetes/apps/spark/mlflow/app/bitnami/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  namespace: spark
  annotations:
    external-dns.alpha.kubernetes.io/target: "appsmith.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:application-braces
spec:
  ingressClassName: internal
  rules:
    - host: "mlflow.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
  tls:
    - hosts:
        - "mlflow.${SECRET_DOMAIN}"
